--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="icon" href="icon (2).png">
+  <link rel="icon" href="icon.png">
 
   <meta charset="utf-8">
   <title> Swati's Personal Site</title>
